styles.css
:root {
  --light-blue: #17273A;
  --light-gray: #f2f2f2;
  --light-orange: #F24F13;
  --light-brown: #8C6B4D;

  --dark-blue: #031326;  
  --dark-gray: #b0b0b0;  
  --dark-orange: #E74912;

  --white: #ffffff;
  --red: #FF0000;
  --terracotta: #A63D17;
  
  --primary-font: 'Poppins', sans-serif;
  --secondary-font: 'Roboto', sans-serif;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: var(--secondary-font);
  background-color: var(--dark-blue);
  color: var(--terracotta);
}

.navbar-list {
  display: none;
  list-style: none;
  padding: 0.5em;
  margin: 0;
  justify-content: center;
  gap: 2em;
}

.navbar-link {
  text-decoration: none;
  color: var(--white);
  font-weight: 500;
  font-size: 1.1em;
  transition: color 0.3s ease;
}

.navbar-link:hover {
  color: var(--dark-gray);
}

.site-main {
  margin: 0;
  padding: 0;
}

.container{
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

.contact-container {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  flex-wrap: wrap;
}

.image-container {
  flex: 1 1 40%;
  text-align: center;
}

.image-container img {
  max-width: 100%;
  height: auto;
}

.text-content {
  display: flex;
  flex-direction: column;
  flex: 1 1 50%;
  gap: 1.5em;
  padding: 2em;
}

.title-class {
  font-size: 2.5em;
  font-weight: 600;
} 

.description-class{
  font-size: 1.2em;
  line-height: 1.8;
  margin: 0 auto 1em;
  max-width: 800px;
}

.section-class {
  text-align: center;
}

.section-class:nth-of-type(1) {
  padding: 3em;
}

.section-class:nth-of-type(odd):not(:first-of-type) {
  padding: 2.5em;
}

.section-class:nth-of-type(even) {
  padding: 1em;
  background-color: var(--white);
} 

.section-class:nth-of-type(odd) .title-class{
  color: var(--light-gray);
}

.section-class:nth-of-type(even) .title-class {
  color: var(--dark-blue); 
}

.section-class:nth-of-type(odd) .description-class{
  color: var(--light-gray);
}

.section-class:nth-of-type(even) .description-class {
  color: var(--light-blue); 
} 

.big-container-habilities{
  align-items: center;
  justify-content: center;
  padding: 2em;
}

.home-contact-button {
  align-self: center;
  padding: 0.75em 2em;
  font-size: 1.2em;
  font-weight: 600;
  border: none;
  border-radius: 10px;
  background-color: var(--dark-orange);
  color: var(--light-gray);
  cursor: pointer;
  transition: transform 0.3s ease, box-shadow 0.3s ease;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.home-contact-button:hover {
  background-color: var(--light-orange);
  transform: scale(1.05);
  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
}

.card-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: 1.5em;
  margin-top: 2em;
}

.main-card {
  background-color: var(--white);
  padding: 1.5em;
  border-radius: 10px;
  cursor: pointer;
  text-align: center;
  min-height: 200px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.main-card:hover {
  background-color: var(--dark-gray);
  transform: scale(1.05);
  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
}

.card-title {
  font-size: 1.5em;
  font-weight: 600;
  margin-bottom: 0.5em;
  color: var(--dark-blue);
}

.card-description {
  font-size: 1em;
  color: var(--light-blue);
}

.recomendation-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 1.5em;
  margin-top: 2em;
}

.recomendation-card {
  background-color: var(--white);
  padding: 1.5em;
  border-radius: 10px;
  text-align: center;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.recomendation-card:hover {
  transform: scale(1.05);
  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
}

.recomendation-avatar {
  width: 50px;
  height: 50px;
  background-image: url('images/user-circle.svg');
  background-size: cover;
  background-position: center; 
  border-radius: 50%;
  margin: 0 auto 1em;
}

.recomendation-name {
  font-size: 1.2em;
  font-weight: 600;
  margin-bottom: 0.5em;
  color: var(--dark-blue);
}

.recomendation-text {
  font-size: 1em;
  color: var(--light-blue);
  line-height: 1.6;
}

.contact-grid {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
  gap: 2rem;
  flex-wrap: wrap; 
}

.contact-image {
  flex: 1 1 30%;
  display: flex;
  justify-content: flex-start; 
  align-items: flex-start;
}

.contact-image img {
  display: block;
  margin: 0;
  padding: 0;
  max-width: 95%;
  margin-top: -100px;
  height: auto;
}

.contact-form {
  flex: 1 1 65%;
  text-align: left;
  margin-left: -2rem;
}

.contact-subtitle {
  font-size: 1.5em;
  font-weight: 600;
  margin-bottom: 0.5em;
  color: var(--dark-blue);
}

.contact-description {
  font-size: 1em;
  color: var(--light-blue);
  margin-bottom: 1em;
}

.contact-services {
  display: flex;
  gap: 1em;
  margin-bottom: 2em;
}

.contact-service-button {
  background-color: var(--dark-orange);
  color: var(--light-gray);
  border: none;
  border-radius: 5px;
  padding: 0.5em 1em;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  transition: transform 0.3s ease, box-shadow 0.3s ease;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.contact-service-button:hover {
  background-color: var(--light-orange);
  transform: scale(1.05);
  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
}

.contact-form-fields {
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.contact-row {
  display: flex;
  gap: 1em;
}

.contact-input {
  flex: 1;
  padding: 0.75em;
  font-size: 1em;
  border-radius: 5px;
  background-color: var(--dark-blue);
  color: var(--light-gray);
}

.contact-textarea {
  padding: 0.75em;
  font-size: 1em;
  border-radius: 5px;
  background-color: var(--dark-blue);
  color: var(--light-gray);
  height: 100px;
}

.contact-submit-button {
  background-color: var(--dark-orange);
  color: var(--light-gray);
  border: none;
  border-radius: 5px;
  padding: 0.75em 2em;
  font-size: 1.2em;
  font-weight: 600;
  cursor: pointer;
  transition: transform 0.3s ease, box-shadow 0.3s ease;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.contact-submit-button:hover {
  background-color: var(--light-orange);
  transform: scale(1.05);
  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
}

.somatix {
  background-image: url('images/somatix-logo.jpg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  justify-content: center;
  align-items: center;
}

.carousel {
  width: 100%;
  margin: auto;
  overflow: hidden;
  position: relative;
}

.carousel-track {
  display: flex;
  transition: transform 0.5s ease-in-out;
}

.carousel-slide {
  flex: 0 0 15%;
  text-align: center;
  font-size: 16px;
  padding: 20px;
  background-size: 70% auto;
  background-repeat: no-repeat;
  background-position: center;
  height: 150px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 10px;
}

.carousel-slide img {
  width: 100%;
  height: 100%;
}

.cursor {
  cursor: pointer;
}

@media screen and (min-width: 720px) {
  .navbar-list {
      display: flex;
  }

  .home-section {
      display: flex;
      align-items: center;
      justify-content: space-between;
      padding: 6em 2em;
  }

  .about-section {
      text-align: center;
  }

  .contact-grid {
    grid-template-columns: 1fr 1fr;
  }

  
}

